v3.xx 2013//
~~~~~~~~~~~~~~~~
Edit: Clarified lead-in to Theorem PSSD (Michael DuBois)
Edit: Example CAEHW, added an "and" (Anna Dovzhik)
Edit: Example BDE, removed stale link (Anna Dovzhik)
Edit: Section VS, removed stale link to Section F
Edit: Minor edits in Sections VS, S, LISS
Typo: Sage B, "that" changes to "than" (Jenna Fontaine)
Typo: Theorem ELIS, "vector space" changed to "a vector space" (Jenna Fontaine)
Typo: Theorem SSS, proof, "also a vector space" (Jenna Fontaine)
Typo: LaTeX/XML formatting in Exercise VS.T10 (Chris Spalding)
Typo: Sage SUTH0, "row space of a matrix by the rows" (Jenna Fontaine)
Typo: Theorem CRN, proof, "Theorem BNS provides a basis" (Jenna Fontaine)
Typo: Theorem CRN, proof, "column without a leading 1" (Jenna Fontaine)
Typo: Subsection PD.GT, "the construction of a basis" (Jenna Fontaine)
Typo: Sage DMS, double "we" (Michael DuBois)
Typo: LaTeX/XML formatting in Solution LISS.C21 (Chris Spalding, Paul Makl)
Typo: Problem PD.T05, added missing "for" (Jenna Fontaine)
Typo: Exercise PD.T33, "set is basis" to "set is a basis" (Jenna Fontaine)
Typo: Exercise PD.T33, remove extra "to" (Jenna Fontaine)
Typo: Theorem SSLD, fixed bolding on vector subscript (Chris Spalding)
Typo: Theorem DRMM, space needed between two words (Anna Dovzhik)
Typo: Example CAEHW, "the" to "this" (Jenna Fontaine)
Typo: Sage CEVAL, "be" to "by" (Anna Dovzhik)
Typo: Theorem HMOE, second step of proof justified by Property DCN (Anna Dovzhik)

v3.11 2013/10/21
~~~~~~~~~~~~~~~~
Edit: Minor edits in Sections WILA, SSLE, RREF, TSS, HSE, NM
Edit: Minor edits in Section VO, LC, SS, LI, LDS, O
Edit: Minor edits in Section MO, MM, MISLE, MINM, CRS, FS
Edit: Extended slightly the conclusion of Theorem HSC
Edit: Sage CNIP, removed obsolete discussion (Michael DuBois)
Edit: Stronger finish to proof of Theorem TT (Anna Dovzhik)
Edit: Wording in Exercise MM.T52 (Dan Drake)
Edit: Section VS, added a semi-colon (Gavin Tranter)