@@ -455,14 +455,14 @@ A=\begin{bmatrix}
 <title>Computing Rank and Nullity</title>
 <statement>
 <indexlocation index="nullity!computing" />
-<p>Suppose that $A$ is an $m\times n$ matrix and $B$ is a row-equivalent matrix in reduced row-echelon form with $r$ nonzero rows.  Then $\rank{A}=r$ and $\nullity{A}=n-r$.</p>
+<p>Suppose that $A$ is an $m\times n$ matrix and $B$ is a row-equivalent matrix in reduced row-echelon form.  Let $r$ denote the number of pivot columns (or the number of nonzero rows).  Then $\rank{A}=r$ and $\nullity{A}=n-r$.</p>
 
 </statement>
 
 <proof>
-<p><acroref type="theorem" acro="BCS" /> provides a basis for the column space by choosing columns of $A$ that correspond to the dependent variables in a description of the solutions to $\homosystem{A}$.  In the analysis of $B$, there is one dependent variable for each leading 1, one per nonzero row, or one per pivot column.  So there are $r$ column vectors in a basis for $\csp{A}$.</p>
+<p><acroref type="theorem" acro="BCS" /> provides a basis for the column space by choosing columns of $A$ that that have the same indices as the pivot columns of $B$.  In the analysis of $B$, each leading 1 provides one nonzero row and one pivot column.  So there are $r$ column vectors in a basis for $\csp{A}$.</p>
 
-<p><acroref type="theorem" acro="BNS" /> provides a basis for the null space by creating basis vectors of the null space of $A$ from entries of $B$, one for each independent variable, one per column without a leading 1.  So there are $n-r$ column vectors in a basis for $\nullity{A}$.</p>
+<p><acroref type="theorem" acro="BNS" /> provides a basis for the null space by creating basis vectors of the null space of $A$ from entries of $B$, one basis vector for each column that is <em>not</em> a pivot column.  So there are $n-r$ column vectors in a basis for $\nullity{A}$.</p>
 
 </proof>
 </theorem>
