@@ -5,6 +5,7 @@ Edit: Example CAEHW, added an "and" (Anna Dovzhik)
 Edit: Example BDE, removed stale link (Anna Dovzhik)
 Edit: Section VS, removed stale link to Section F
 Edit: Minor edits in Sections VS, S, LISS
+Edit: Theorem CRN, reworded proof, correction included
 Typo: Sage B, "that" changes to "than" (Jenna Fontaine)
 Typo: Theorem ELIS, "vector space" changed to "a vector space" (Jenna Fontaine)
 Typo: Theorem SSS, proof, "also a vector space" (Jenna Fontaine)
